crates/shipper-cli/tests/snapshots/e2e_expanded__error_missing_config_subcommand.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
Configuration file management

Usage: shipper-cli config [OPTIONS] <COMMAND>

Commands:
  init      Generate a default .shipper.toml configuration file
  validate  Validate a configuration file
  help      Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>                Path to a custom configuration file (.shipper.toml)
      --manifest-path <MANIFEST_PATH>  Path to the workspace Cargo.toml [default: Cargo.toml]
      --registry <REGISTRY>            Cargo registry name (default: crates-io)
      --api-base <API_BASE>            Registry API base URL (default: <https://crates.io>)
      --allow-loopback                 Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations
      --package <PACKAGES>             Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members
      --state-dir <STATE_DIR>          Directory for shipper state and receipts (default: .shipper)
      --format <FORMAT>                Output format: text (default) or json [default: text] [possible values: text, json]
      --verbose                        Show detailed dependency analysis for plan command
  -q, --quiet                          Suppress informational output
  -h, --help                           Print help (see more with '--help')
