crates/shipper-cli/tests/snapshots/e2e_expanded__error_unknown_subcommand.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
error: unrecognized subcommand 'foobar'

Usage: shipper-cli.exe [OPTIONS] <COMMAND>

For more information, try '--help'.
