crates/shipper-cli/tests/snapshots/e2e_expanded__error_unknown_subcommand_exit_code.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: output.status.code()
---
Some(
    2,
)
