crates/shipper-cli/tests/snapshots/e2e_expanded__help_config.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
Create and check the `.shipper.toml` configuration file.

Config values set defaults for policy, verification, readiness, retry,
locking, and registry selection; CLI flags always override them. Both
subcommands work on a file path and do not need a loadable workspace.

EXAMPLES:
    # Write a documented default config to .shipper.toml:
    shipper config init

    # Write it somewhere else:
    shipper config init --output config/shipper.toml

    # Check an existing config before a release:
    shipper config validate --path .shipper.toml


Usage: shipper-cli config [OPTIONS] <COMMAND>

Commands:
  init      Generate a default .shipper.toml configuration file
  validate  Validate a configuration file
  help      Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
